--- a/product-service/package.json
+++ b/product-service/package.json
@@ -1,20 +1,26 @@
 {
   "name": "product-service",
   "version": "1.0.0",
-  "description": "Serverless webpack example using Typescript",
-  "main": "handler.js",
+  "description": "Serverless backend service with using Typescript",
+  "main": "handlers.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "sls deploy",
+    "test": "jest --silent",
+    "test:watch": "jest --watch",
+    "test:debug": "node --inspect ./node_modules/jest/bin/jest.js --watch --runInBand"
   },
   "dependencies": {
     "source-map-support": "^0.5.10"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
+    "@types/jest": "^26.0.15",
     "@types/node": "^10.12.18",
     "@types/serverless": "^1.72.5",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
+    "jest": "^26.6.1",
     "serverless-webpack": "^5.2.0",
+    "ts-jest": "^26.4.3",
     "ts-loader": "^5.3.3",
     "ts-node": "^8.10.2",
     "typescript": "^3.2.4",
