--- a/product-service/package.json
+++ b/product-service/package.json
@@ -7,16 +7,23 @@
     "deploy": "sls deploy",
     "test": "jest --silent",
     "test:watch": "jest --watch",
-    "test:debug": "node --inspect ./node_modules/jest/bin/jest.js --watch --runInBand"
+    "test:debug": "node --inspect ./node_modules/jest/bin/jest.js --watch --runInBand",
+    "pgAdmin-image:install": "docker pull dpage/pgadmin4:latest",
+    "pgAdmin-container:start": "docker run -p 80:80 -e PGADMIN_DEFAULT_EMAIL=admin@mail.com -e PGADMIN_DEFAULT_PASSWORD=admin -d dpage/pgadmin4"
   },
   "dependencies": {
-    "source-map-support": "^0.5.10"
+    "pg": "^8.4.2",
+    "source-map-support": "^0.5.10",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^10.12.18",
+    "@types/pg": "^7.14.6",
     "@types/serverless": "^1.72.5",
+    "dotenv-webpack": "^5.1.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "jest": "^26.6.1",
     "serverless-webpack": "^5.2.0",
