--- a/product-service/package.json
+++ b/product-service/package.json
@@ -12,6 +12,7 @@
     "pgAdmin-container:start": "docker run -p 80:80 -e PGADMIN_DEFAULT_EMAIL=admin@mail.com -e PGADMIN_DEFAULT_PASSWORD=admin -d dpage/pgadmin4"
   },
   "dependencies": {
+    "aws-sdk": "^2.792.0",
     "pg": "^8.4.2",
     "source-map-support": "^0.5.10",
     "dotenv": "^8.2.0"
@@ -23,6 +24,7 @@
     "@types/node": "^10.12.18",
     "@types/pg": "^7.14.6",
     "@types/serverless": "^1.72.5",
+    "aws-sdk-mock": "^5.1.0",
     "dotenv-webpack": "^5.1.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "jest": "^26.6.1",
