task 9. bff service refactoring

--- a/bff-service/.env
+++ b/bff-service/.env
@@ -1,4 +1,4 @@
 PORT=3000
 NODE_ENV=development
 PRODUCTS_SERVICE_URL=https://43yzo1yuj3.execute-api.eu-west-1.amazonaws.com/develop
-CART_SERVICE_URL=http://petr150894-cart-api-develop.eu-west-1.elasticbeanstalk.com/api
+CART_SERVICE_URL=http://petr150894-cart-api-develop.eu-west-1.elasticbeanstalk.com/api/profile
