--- a/bff-service/package.json
+++ b/bff-service/package.json
@@ -5,6 +5,9 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -19,7 +22,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "eb:create": "eb create develop --single --cname petr150894-bff-api-develop"
+    "eb:create": "eb create develop2 --single --cname petr150894-bff-api-develop2",
+    "eb:update": "eb deploy"
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
