--- a/bff-service/package.json
+++ b/bff-service/package.json
@@ -23,7 +23,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "eb:create": "eb create develop2 --single --cname petr150894-bff-api-develop2",
+    "eb:app:create": "eb init --platform node.js petr150894-bff-api",
+    "eb:env:create": "eb create develop2 --single --cname petr150894-bff-api-develop2",
     "eb:update": "eb deploy develop2"
   },
   "dependencies": {
@@ -31,7 +32,6 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "axios": "^0.21.0",
-    "body-parser": "^1.19.0",
     "dotenv-override": "^5.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -41,25 +41,24 @@
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
     "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
-    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "7.0.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.6.3",
     "prettier": "^2.1.2",
-    "supertest": "^6.0.0",
-    "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.8",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
-    
+    "@types/jest": "^26.0.15",
+    "@types/supertest": "^2.0.10",
+    "jest": "^26.6.3",
+    "supertest": "^6.0.0",
+    "ts-jest": "^26.4.3"
   },
   "jest": {
     "moduleFileExtensions": [
