--- a/bff-service/package.json
+++ b/bff-service/package.json
@@ -28,34 +28,36 @@
     "eb:update": "eb deploy develop2"
   },
   "dependencies": {
+    "@nestjs/cli": "^7.5.1",
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
-    "axios": "^0.21.0",
-    "dotenv-override": "^5.0.1",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
-    "winston": "^3.3.3",
-    "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
-    "@types/express": "^4.17.8",
-    "@types/node": "^14.14.6",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
+    "axios": "^0.21.0",
+    "cache-manager": "^3.4.0",
+    "dotenv-override": "^5.0.1",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "7.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.6.3",
     "ts-loader": "^8.0.8",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@nestjs/testing": "^7.5.1",
+    "@types/cache-manager": "^2.10.3",
     "@types/jest": "^26.0.15",
     "@types/supertest": "^2.0.10",
+    "@types/express": "^4.17.8",
+    "@types/node": "^14.14.6",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
     "jest": "^26.6.3",
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3"
